<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_auth"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:scaleType="centerCrop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="60dp"-->
        <!--android:text="Security"-->
        <!--android:textAlignment="center"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="40sp"-->
        <!--android:textStyle="bold" />-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.1dp"
                android:background="@drawable/field_bordered_top"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:maxLines="1"
                android:padding="20dp"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field_bordered_bottom"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="20dp"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/button_color"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_in"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_forgot_passwd"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_forgot_passwd"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>
