<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_auth"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:scaleType="centerCrop"
    tools:context=".activities.RecoverPasswdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="0.1dp"
                        android:background="@drawable/field_bordered_top"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10dp"
                        android:drawableTint="#424242"
                        android:hint="@string/prompt_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="20dp"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/btn_edit_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1.8"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/ic_edit"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_search_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/btn_search_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button_color"
                        android:text="@string/action_continue"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:id="@+id/layout_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <!-- Login progress -->
                    <ProgressBar
                        android:id="@+id/login_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/white"
                        android:indeterminateTintMode="src_in"
                        android:padding="10dp"
                        android:visibility="visible" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/layout_confirm_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/field_bordered_bottom"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:fontFamily="sans-serif"
                        android:paddingTop="10dp"
                        android:text="Será enviado uma confirmação para o número:"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_phone"
                            android:tint="@color/ic_color" />

                        <TextView
                            android:id="@+id/txPhoneConf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="sans-serif"
                            android:gravity="center"
                            android:paddingLeft="10dp"
                            android:text="(xx) xxxxx-xxxx"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingTop="10dp">

                        <Button
                            android:id="@+id/btn_confirm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/button_color"
                            android:text="@string/action_confirm"
                            android:textColor="@color/white"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <include
            layout="@layout/recover_passwd_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include
            layout="@layout/recover_passwd_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
